# src/main/java/com/higgsup/kpi/entity/KpiSupport.java
@@ -1,0 +1,61 @@
+package com.higgsup.kpi.entity;
+
+import org.hibernate.annotations.CreationTimestamp;
+
+import javax.persistence.*;
+import java.sql.Timestamp;
+
+@Entity
+@Table(name = "kpi_support")
+public class KpiSupport {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", unique = true, nullable = false)
+    private Integer id;
+
+    @Basic
+    @Column(name = "task_name")
+    private String taskName;
+
+    @Basic
+    @Column(name = "task_point")
+    private Float point;
+
+    @Basic
+    @Column(name = "created_date")
+    @CreationTimestamp
+    private Timestamp createdDate;
+
+    public Integer getId() {
+        return id;
+    }
+
+    public void setId(Integer id) {
+        this.id = id;
+    }
+
+    public String getTaskName() {
+        return taskName;
+    }
+
+    public void setTaskName(String task) {
+        this.taskName = task;
+    }
+
+    public Float getPoint() {
+        return point;
+    }
+
+    public void setPoint(Float point) {
+        this.point = point;
+    }
+
+    public Timestamp getCreatedDate() {
+        return createdDate;
+    }
+
+    public void setCreatedDate(Timestamp createdDate) {
+        this.createdDate = createdDate;
+    }
+}
